# super-calc-system

./: .gitignore  DESIGN.md  LICENSE  README.md  build_firmware.sh  deploy.sh  《超采集算系统》(1).docx
docs/: protocol.md  工程介绍.md
hardware/: bom.csv
ide/: README.md
ide/arduino/: README.md
ide/arduino/pico2_demo/: pico2_demo.ino
ide/arduino/pico2_sb/: pico2_sb.ino
ide/arduino/pico2_sb/src/: addr_assigner.cpp  addr_assigner.h  cluster_mgr.cpp  cluster_mgr.h  config.h  data_aggregator.cpp  data_aggregator.h  dma_spi_harvester.cpp  dma_spi_harvester.h  edge_compute.cpp  edge_compute.h  foolproof.cpp  foolproof.h  i2c_sched_master.cpp  i2c_sched_master.h  oc_control.cpp  oc_control.h  spi_master.cpp  spi_master.h  system_status.cpp  system_status.h  usb_cdc_comm.cpp  usb_cdc_comm.h
ide/arduino/pico_demo/: pico_demo.ino
ide/arduino/pico_sb/: pico_sb.ino
ide/arduino/pico_sb/src/: adc_sample.cpp  adc_sample.h  config.h  crack_engine.cpp  crack_engine.h  digital_capture.cpp  digital_capture.h  hw_test.cpp  hw_test.h  i2c_sched_regs.cpp  i2c_sched_regs.h  i2c_sched_slave.cpp  i2c_sched_slave.h  overclock.cpp  overclock.h  spi_comm.cpp  spi_comm.h  status_mgr.cpp  status_mgr.h
raspberry_pi/: app.py  business_logic.py  config.py  data_receiver.py  install.sh  requirements.txt  storage_manager.py
raspberry_pi/static/css/: style.css
raspberry_pi/static/js/: main.js
raspberry_pi/systemd/: super_calc_daemon.service  super_calc_web.service
raspberry_pi/templates/: index.html
sdk/: README.md
sdk/SB/: HARDWARE_INTERFACE.md  README.md
sdk/SB/hardware/: README.md
sdk/SB/pico/firmware/: CMakeLists.txt
sdk/SB/pico/firmware/include/: FreeRTOSConfig.h  adc_sample.h  addr_assign_protocol.h  config.h  crack_engine.h  digital_capture.h  hw_test.h  i2c_sched_regs.h  i2c_sched_slave.h  overclock.h  spi_comm.h  status_mgr.h
sdk/SB/pico/firmware/src/: adc_sample.c  crack_engine.c  digital_capture.c  digital_capture.pio  hw_test.c  i2c_sched_regs.c  i2c_sched_slave.c  main.c  overclock.c  spi_comm.c  status_mgr.c
sdk/SB/pico2/firmware/: CMakeLists.txt
sdk/SB/pico2/firmware/include/: FreeRTOSConfig.h  addr_assign_protocol.h  addr_assigner.h  cluster_mgr.h  config.h  data_aggregator.h  dma_spi_harvester.h  edge_compute.h  foolproof.h  i2c_sched_master.h  i2c_sched_regs.h  oc_control.h  spi_master.h  system_status.h  usb_cdc_comm.h
sdk/SB/pico2/firmware/src/: addr_assigner.c  cluster_mgr.c  data_aggregator.c  dma_spi_harvester.c  edge_compute.c  foolproof.c  i2c_sched_master.c  main.c  oc_control.c  spi_master.c  system_status.c  usb_cdc_comm.c
sdk/SB/raspberry_pi/: README.md  main.py  requirements.txt
sdk/SB/raspberry_pi/algorithms/: __init__.py  analog_algorithms.py  crack_algorithms.py  digital_algorithms.py  optimized_algorithms.py  parallel_processing.py
sdk/SB/raspberry_pi/cluster/: adaptive_cluster.py
sdk/SB/raspberry_pi/daemons/: business_logic.py  crack_engine_daemon.py  data_receiver.py  hmi_task.py  mode_scheduler.py  storage_remote.py  watchdog_daemon.py
sdk/SB/raspberry_pi/modes/: mode_scheduler.py
sdk/SB/raspberry_pi/ncurses_ui/: main.c  usb_comm.c  usb_comm.h  widgets.c  widgets.h
sdk/SB/raspberry_pi/services/: web_service.py
sdk/SB/raspberry_pi/web/static/css/: style.css
sdk/SB/raspberry_pi/web/static/js/: app.js
sdk/SB/raspberry_pi/web/templates/: index.html
sdk/SB/tools/: deploy.py  test_algorithms.py  test_optimization.py  verify_system.py
sdk/demo/: HARDWARE_INTERFACE.md
sdk/demo/docs/: DEMO_README.md
sdk/demo/pico/firmware/: CMakeLists.txt  main.c
sdk/demo/pico2/firmware/: CMakeLists.txt  main.c
sdk/demo/raspberry_pi/: app_demo.py  config_demo.py
sdk/demo/raspberry_pi/static/css/: style_demo.css
sdk/demo/raspberry_pi/static/js/: demo.js
sdk/demo/raspberry_pi/templates/: index.html
sdk/demo/tools/: demo_deploy.py  verify_demo.py
